@@ -1,3 +1,8 @@
+2008-02-12  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Improved auto insert
+	  bracket.
+
 2008-02-11  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.SourceEditor/SourceEditorView.cs,
